Version 1.22.3 *
==================
- Removed irritating message when interrupting a GAMS process.

Version 1.22.2
==================
- Fixed incorrect ESC key behavior in Parameter File Editor, Solver Option Editor, and GAMS User Configuration Editor.
- Fixed S&R dialog wildcard include and exclude file filters, before they did not match all expected files.
- Fixed that changes to command line parameters were lost when changing the main file.
- Fixed that Studio can't start more than 11 GAMS jobs in parallel.
- Fixed update modification state when the 'Dynamic main file' setting has changed.
- Fixed incorrect behavior of solver option editor
   - editing an empty string value for a string option with a defined default value no longer replaced by the comment. 
   - dragging and dropping an option no longer adding multiple rows but a single row of options.
   - replacing an existing option row by drag and drop no longer crashed Studio.
- Improved behavior of solver option editor and Parameter File Editor
   - double clicking an enumerated value of an option adds the description of the enumerated value instead of the option to the comment column.
   - enabling the `Open As Text` button always and checking, when clicked, if a file has been modified before.
   - removing unnecessary error messages when pressing `+` icon to add/append new option.
- Improved license validation log, i.e. all messages of the license validation are written to the system log now.

Version 1.22.1
==================
- Fixed mouse scroll issue in log and lst-viewer on macOS, i.e. the scrolling is smooth now.
- Fixed horizontal viewer tab scrolling, when one specific project is focused.
- Fixed directories in project options not changeable when default workdir isn't defined (e.g. when starting with --ignore-settings)
- Improved the workflow to create a new empty project.
- Improved dynamic main file selection, i.e. instantly set the main file marker on tab change.
- Upgraded to Qt 6.9.2.
