@@ -1,5 +1,6 @@
 Version 1.22.3 *
 ==================
+- Improved Studio behavior when files are missing after a GAMS run error.
 - Removed irritating message when interrupting a GAMS process.
 
 Version 1.22.2
